--- a/case study 5/Model_D.ipynb
+++ b/case study 5/Model_D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "max          10824.00000  747520.00000  327208.00000  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "pkts_received                pkts_received              0.0"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "Name: Action, dtype: int64"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "Text(0.5, 1.0, 'Value Counts for Action Taken by System')"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "Name: Action2, dtype: int64"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -571,37 +571,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import make_classification\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.experimental import enable_halving_search_cv  # noqa\n",
-    "from sklearn.model_selection import HalvingGridSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "import pandas as pd\n",
     "param_grid= {'kernel': ('linear', 'rbf'),\n",
     "             'C': [.5, 10, 100]}\n",
     "base_estimator = SVC(gamma='scale')\n",
     "X, y = make_classification(n_samples=1000)\n",
-    "sh = HalvingGridSearchCV(base_estimator, param_grid, cv=5,\n",
-    "                         factor=2, min_resources=20).fit(X_train,y_train)\n",
+    "sh = GridSearchCV(base_estimator, param_grid, cv=5).fit(X_train,y_train)\n",
     "sh.best_estimator_\n",
     "model = sh.best_estimator_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9935858277336591"
+       "0.9935094685400122"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,19 +613,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVC(C=100)\n"
+      "SVC(C=100, kernel='linear')\n"
      ]
     }
    ],
    "source": [
     "print(sh.best_estimator_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 100, 'kernel': 'linear'}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sh.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best score: 0.9932992369365022 with params {'C': 100, 'kernel': 'linear'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Best score: {sh.best_score_} with params {sh.best_params_}\")"
    ]
   }
  ],
