--- a/case study 5/Case_Study_05_S.ipynb
+++ b/case study 5/Case_Study_05_S.ipynb
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "b3f2111d",
    "metadata": {},
    "outputs": [],
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 52,
    "id": "dd2139d4",
    "metadata": {},
    "outputs": [],
@@ -1506,7 +1506,9 @@
    "cell_type": "code",
    "execution_count": 84,
    "id": "bf33b894",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1522,7 +1524,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 55,
+   "id": "3b450f39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sgd = SGDClassifier(early_stopping=True, max_iter=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "id": "7b43352f",
    "metadata": {},
    "outputs": [
@@ -1530,16 +1542,16 @@
      "data": {
       "text/plain": [
        "GridSearchCV(cv=StratifiedKFold(n_splits=10, random_state=None, shuffle=False),\n",
-       "             estimator=SGDClassifier(early_stopping=True, max_iter=10000),\n",
-       "             param_grid={'class_weight': ['balanced', None],\n",
-       "                         'eta0': [0.02, 0.03, 0.05],\n",
+       "             estimator=SGDClassifier(early_stopping=True),\n",
+       "             param_grid={'class_weight': [None],\n",
+       "                         'eta0': [0.02, 0.03, 0.04, 0.05],\n",
        "                         'learning_rate': ['adaptive', 'constant',\n",
        "                                           'invscaling'],\n",
        "                         'penalty': [None]},\n",
        "             scoring='accuracy')"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1548,8 +1560,8 @@
     "param_grid = { \n",
     "    'learning_rate': ['adaptive','constant','invscaling'],\n",
     "    'penalty': [None],\n",
-    "    'class_weight' : [\"balanced\", None],\n",
-    "    'eta0': [0.02, 0.03, 0.05]\n",
+    "    'class_weight' : [None],\n",
+    "    'eta0': [0.02, 0.03, 0.04, 0.05]\n",
     "}\n",
     "CV_sgd = GridSearchCV(estimator=sgd, param_grid=param_grid, cv=skf_cv,scoring=\"accuracy\")\n",
     "CV_sgd.fit(X_full, y)"
@@ -1557,18 +1569,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 57,
    "id": "90d92da1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SGDClassifier(early_stopping=True, eta0=0.05, learning_rate='constant',\n",
-       "              max_iter=10000, penalty=None)"
+       "SGDClassifier(early_stopping=True, eta0=0.04, learning_rate='constant',\n",
+       "              penalty=None)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 58,
    "id": "d1bc9817",
    "metadata": {},
    "outputs": [],
@@ -1589,17 +1601,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 59,
    "id": "66485c94",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9904779581582179"
+       "0.990706870264342"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(mean_sgd_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "ea12439d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import SGDClassifier\n",
+    "\n",
+    "skf_cv = StratifiedKFold(n_splits=10)\n",
+    "final_sto = SGDClassifier(early_stopping=True, eta0=0.04, learning_rate='constant',\n",
+    "              penalty=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "6bb27e73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_sgd_2=cross_val_score(final_sto,X_full,y, cv = skf_cv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "416859d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9906305670050933"
+      ]
+     },
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea12439d",
+   "id": "e57c27db",
    "metadata": {},
    "outputs": [],
    "source": []
