--- a/case study 6/Model_D.ipynb
+++ b/case study 6/Model_D.ipynb
@@ -2,6 +2,232 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from datetime import date\n",
+    "import sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th># label</th>\n",
+       "      <th>f0</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>f2</th>\n",
+       "      <th>f3</th>\n",
+       "      <th>f4</th>\n",
+       "      <th>f5</th>\n",
+       "      <th>f6</th>\n",
+       "      <th>f7</th>\n",
+       "      <th>f8</th>\n",
+       "      <th>...</th>\n",
+       "      <th>f18</th>\n",
+       "      <th>f19</th>\n",
+       "      <th>f20</th>\n",
+       "      <th>f21</th>\n",
+       "      <th>f22</th>\n",
+       "      <th>f23</th>\n",
+       "      <th>f24</th>\n",
+       "      <th>f25</th>\n",
+       "      <th>f26</th>\n",
+       "      <th>mass</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-0.346368</td>\n",
+       "      <td>0.416306</td>\n",
+       "      <td>0.999236</td>\n",
+       "      <td>0.475342</td>\n",
+       "      <td>0.427493</td>\n",
+       "      <td>-0.005984</td>\n",
+       "      <td>1.989833</td>\n",
+       "      <td>0.344530</td>\n",
+       "      <td>1.566297</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.105282</td>\n",
+       "      <td>0.267826</td>\n",
+       "      <td>0.378718</td>\n",
+       "      <td>1.743123</td>\n",
+       "      <td>3.406367</td>\n",
+       "      <td>4.350537</td>\n",
+       "      <td>-0.352571</td>\n",
+       "      <td>1.130032</td>\n",
+       "      <td>2.227706</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.708236</td>\n",
+       "      <td>-0.319394</td>\n",
+       "      <td>-1.241873</td>\n",
+       "      <td>-0.887231</td>\n",
+       "      <td>-0.871906</td>\n",
+       "      <td>-0.005984</td>\n",
+       "      <td>-0.001047</td>\n",
+       "      <td>-1.038225</td>\n",
+       "      <td>0.655748</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.178141</td>\n",
+       "      <td>-0.877361</td>\n",
+       "      <td>-1.483769</td>\n",
+       "      <td>-0.573682</td>\n",
+       "      <td>-1.693781</td>\n",
+       "      <td>-0.545062</td>\n",
+       "      <td>-0.299118</td>\n",
+       "      <td>-0.662942</td>\n",
+       "      <td>-0.193019</td>\n",
+       "      <td>750.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.360693</td>\n",
+       "      <td>1.794174</td>\n",
+       "      <td>0.264738</td>\n",
+       "      <td>-0.472273</td>\n",
+       "      <td>-0.292344</td>\n",
+       "      <td>-1.054221</td>\n",
+       "      <td>-1.150495</td>\n",
+       "      <td>1.423404</td>\n",
+       "      <td>1.270098</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.199511</td>\n",
+       "      <td>0.539020</td>\n",
+       "      <td>-1.590629</td>\n",
+       "      <td>-0.573682</td>\n",
+       "      <td>-0.543636</td>\n",
+       "      <td>-0.937456</td>\n",
+       "      <td>-0.300344</td>\n",
+       "      <td>-0.523262</td>\n",
+       "      <td>-1.506304</td>\n",
+       "      <td>750.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-0.377914</td>\n",
+       "      <td>-0.103932</td>\n",
+       "      <td>-0.649434</td>\n",
+       "      <td>-2.125015</td>\n",
+       "      <td>-1.643797</td>\n",
+       "      <td>-0.005984</td>\n",
+       "      <td>1.011112</td>\n",
+       "      <td>-1.040340</td>\n",
+       "      <td>-0.541991</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.463763</td>\n",
+       "      <td>-0.006583</td>\n",
+       "      <td>1.089122</td>\n",
+       "      <td>-0.573682</td>\n",
+       "      <td>-0.276348</td>\n",
+       "      <td>-0.409272</td>\n",
+       "      <td>-0.349926</td>\n",
+       "      <td>-0.307123</td>\n",
+       "      <td>0.529698</td>\n",
+       "      <td>1250.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.067436</td>\n",
+       "      <td>-0.636762</td>\n",
+       "      <td>-0.620166</td>\n",
+       "      <td>-0.062551</td>\n",
+       "      <td>1.588715</td>\n",
+       "      <td>-0.005984</td>\n",
+       "      <td>-0.595304</td>\n",
+       "      <td>-1.238987</td>\n",
+       "      <td>0.336844</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.552837</td>\n",
+       "      <td>-1.418494</td>\n",
+       "      <td>-0.562982</td>\n",
+       "      <td>1.743123</td>\n",
+       "      <td>0.881802</td>\n",
+       "      <td>0.002516</td>\n",
+       "      <td>1.560950</td>\n",
+       "      <td>-0.150760</td>\n",
+       "      <td>-1.023889</td>\n",
+       "      <td>750.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   # label        f0        f1        f2        f3        f4        f5  \\\n",
+       "0      1.0 -0.346368  0.416306  0.999236  0.475342  0.427493 -0.005984   \n",
+       "1      1.0  1.708236 -0.319394 -1.241873 -0.887231 -0.871906 -0.005984   \n",
+       "2      0.0 -0.360693  1.794174  0.264738 -0.472273 -0.292344 -1.054221   \n",
+       "3      1.0 -0.377914 -0.103932 -0.649434 -2.125015 -1.643797 -0.005984   \n",
+       "4      0.0 -0.067436 -0.636762 -0.620166 -0.062551  1.588715 -0.005984   \n",
+       "\n",
+       "         f6        f7        f8  ...       f18       f19       f20       f21  \\\n",
+       "0  1.989833  0.344530  1.566297  ...  4.105282  0.267826  0.378718  1.743123   \n",
+       "1 -0.001047 -1.038225  0.655748  ... -1.178141 -0.877361 -1.483769 -0.573682   \n",
+       "2 -1.150495  1.423404  1.270098  ... -1.199511  0.539020 -1.590629 -0.573682   \n",
+       "3  1.011112 -1.040340 -0.541991  ...  0.463763 -0.006583  1.089122 -0.573682   \n",
+       "4 -0.595304 -1.238987  0.336844  ... -0.552837 -1.418494 -0.562982  1.743123   \n",
+       "\n",
+       "        f22       f23       f24       f25       f26    mass  \n",
+       "0  3.406367  4.350537 -0.352571  1.130032  2.227706  1000.0  \n",
+       "1 -1.693781 -0.545062 -0.299118 -0.662942 -0.193019   750.0  \n",
+       "2 -0.543636 -0.937456 -0.300344 -0.523262 -1.506304   750.0  \n",
+       "3 -0.276348 -0.409272 -0.349926 -0.307123  0.529698  1250.0  \n",
+       "4  0.881802  0.002516  1.560950 -0.150760 -1.023889   750.0  \n",
+       "\n",
+       "[5 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(r\"C:\\Users\\drsco\\Documents\\GitHub\\QTW\\qtw\\case study 6\\all_train.csv.gz\", compression='gzip', \n",
+    "                                 header=0, sep=',', quotechar='\"')\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,10 +235,29 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.1 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.1"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d5e22e80c5a5049300fcd1222e380e7a80cada809ed3c1dbd59a10e881ec2acb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
