smaple nn built

--- a/case study 6/Model_D.ipynb
+++ b/case study 6/Model_D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(r\"C:\\Users\\drsco\\Documents\\GitHub\\QTW\\qtw\\case study 6\\all_train.csv.gz\", compression='gzip', \n",
+    "                                 header=0, sep=',', quotechar='\"')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +50,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th># label</th>\n",
+       "      <th>label</th>\n",
        "      <th>f0</th>\n",
        "      <th>f1</th>\n",
        "      <th>f2</th>\n",
@@ -190,12 +200,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   # label        f0        f1        f2        f3        f4        f5  \\\n",
-       "0      1.0 -0.346368  0.416306  0.999236  0.475342  0.427493 -0.005984   \n",
-       "1      1.0  1.708236 -0.319394 -1.241873 -0.887231 -0.871906 -0.005984   \n",
-       "2      0.0 -0.360693  1.794174  0.264738 -0.472273 -0.292344 -1.054221   \n",
-       "3      1.0 -0.377914 -0.103932 -0.649434 -2.125015 -1.643797 -0.005984   \n",
-       "4      0.0 -0.067436 -0.636762 -0.620166 -0.062551  1.588715 -0.005984   \n",
+       "   label        f0        f1        f2        f3        f4        f5  \\\n",
+       "0    1.0 -0.346368  0.416306  0.999236  0.475342  0.427493 -0.005984   \n",
+       "1    1.0  1.708236 -0.319394 -1.241873 -0.887231 -0.871906 -0.005984   \n",
+       "2    0.0 -0.360693  1.794174  0.264738 -0.472273 -0.292344 -1.054221   \n",
+       "3    1.0 -0.377914 -0.103932 -0.649434 -2.125015 -1.643797 -0.005984   \n",
+       "4    0.0 -0.067436 -0.636762 -0.620166 -0.062551  1.588715 -0.005984   \n",
        "\n",
        "         f6        f7        f8  ...       f18       f19       f20       f21  \\\n",
        "0  1.989833  0.344530  1.566297  ...  4.105282  0.267826  0.378718  1.743123   \n",
@@ -214,16 +224,168 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\drsco\\Documents\\GitHub\\QTW\\qtw\\case study 6\\all_train.csv.gz\", compression='gzip', \n",
-    "                                 header=0, sep=',', quotechar='\"')\n",
-    "\n",
+    "df.rename(columns={ df.columns[0]: \"label\" }, inplace = True)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label    0\n",
+       "f0       0\n",
+       "f1       0\n",
+       "f2       0\n",
+       "f3       0\n",
+       "f4       0\n",
+       "f5       0\n",
+       "f6       0\n",
+       "f7       0\n",
+       "f8       0\n",
+       "f9       0\n",
+       "f10      0\n",
+       "f11      0\n",
+       "f12      0\n",
+       "f13      0\n",
+       "f14      0\n",
+       "f15      0\n",
+       "f16      0\n",
+       "f17      0\n",
+       "f18      0\n",
+       "f19      0\n",
+       "f20      0\n",
+       "f21      0\n",
+       "f22      0\n",
+       "f23      0\n",
+       "f24      0\n",
+       "f25      0\n",
+       "f26      0\n",
+       "mass     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "\n",
+    "split = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=42)\n",
+    "for train_index, holdback_index in split.split(df, df.label):\n",
+    "    training_df = df.iloc[train_index]\n",
+    "    holdback_df = df.iloc[holdback_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of training set:  (5600000, 29)\n",
+      "Size of validation set:  (700000, 29)\n",
+      "Size of test set:  (700000, 29)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "\n",
+    "split = StratifiedShuffleSplit(n_splits=1, test_size=0.5, random_state=42)\n",
+    "for validation_index, test_index in split.split(holdback_df, holdback_df.label):\n",
+    "    validation_df = holdback_df.iloc[validation_index]\n",
+    "    test_df = holdback_df.iloc[test_index]\n",
+    "\n",
+    "print(\"Size of training set: \",training_df.shape)\n",
+    "print(\"Size of validation set: \",validation_df.shape)\n",
+    "print(\"Size of test set: \",test_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_features = training_df.drop(['label'],axis=1).values\n",
+    "train_labels = training_df['label'].values\n",
+    "\n",
+    "validation_features = validation_df.drop(['label'],axis=1).values\n",
+    "validation_labels = validation_df['label'].values\n",
+    "\n",
+    "test_features = test_df.drop(['label'],axis=1).values\n",
+    "test_labels = test_df['label'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scl_obj = StandardScaler()\n",
+    "scl_obj.fit(train_features)\n",
+    "train_features_scaled = scl_obj.transform(train_features)\n",
+    "scl_obj.fit(validation_features)\n",
+    "validation_features_scaled = scl_obj.transform(validation_features)\n",
+    "scl_obj.fit(test_features)\n",
+    "test_features_scaled = scl_obj.transform(test_features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simple Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import regularizers\n",
+    "\n",
+    "research_model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(300, activation='tanh', input_shape=(28,),kernel_regularizer=regularizers.l2(0.00001)),\n",
+    "    tf.keras.layers.Dense(300, activation='tanh',kernel_regularizer=regularizers.l2(0.00001)),\n",
+    "    tf.keras.layers.Dense(300, activation='tanh',kernel_regularizer=regularizers.l2(0.00001)),\n",
+    "    tf.keras.layers.Dense(300, activation='tanh',kernel_regularizer=regularizers.l2(0.00001)),\n",
+    "    tf.keras.layers.Dense(300, activation='tanh',kernel_regularizer=regularizers.l2(0.00001)),\n",
+    "    tf.keras.layers.Dense(1, activation='sigmoid')   \n",
+    "])\n",
+    "\n",
+    "research_model.compile(optimizer='adam',\n",
+    "              loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
+    "              metrics=[tf.keras.metrics.AUC(name='AUC'),'accuracy'])"
    ]
   },
   {
@@ -231,7 +393,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "research_model.fit(train_features_scaled, train_labels, batch_size=5000, epochs=5)"
+   ]
   }
  ],
  "metadata": {
