early stopping added

--- a/case study 6/Model_D.ipynb
+++ b/case study 6/Model_D.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,12 +390,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\drsco\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tensorflow\\python\\util\\dispatch.py:1082: UserWarning: \"`binary_crossentropy` received `from_logits=True`, but the `output` argument was produced by a sigmoid or softmax activation and thus does not represent logits. Was this intended?\"\n",
+      "  return dispatch_target(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1120/1120 [==============================] - 404s 357ms/step - loss: 0.3016 - AUC: 0.9469 - accuracy: 0.8664\n",
+      "Epoch 2/5\n",
+      "1120/1120 [==============================] - 385s 343ms/step - loss: 0.2801 - AUC: 0.9542 - accuracy: 0.8780\n",
+      "Epoch 3/5\n",
+      "1120/1120 [==============================] - 365s 326ms/step - loss: 0.2751 - AUC: 0.9554 - accuracy: 0.8801\n",
+      "Epoch 4/5\n",
+      "1120/1120 [==============================] - 361s 322ms/step - loss: 0.2723 - AUC: 0.9561 - accuracy: 0.8810\n",
+      "Epoch 5/5\n",
+      "1120/1120 [==============================] - 348s 311ms/step - loss: 0.2703 - AUC: 0.9565 - accuracy: 0.8820\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x29e0fb00fa0>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "research_model.fit(train_features_scaled, train_labels, batch_size=5000, epochs=5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "callback = [\n",
+    "  tf.keras.callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=10,mode='auto', min_delta=0.0001, cooldown=0, min_lr=0.05)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
