--- a/case study 6/Model_S_casestudy6.ipynb
+++ b/case study 6/Model_S_casestudy6.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "66ba120b",
+   "id": "f0b42fa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "723ca654",
+   "id": "110b6be1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "66bff498",
+   "id": "a1476343",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "07e85d7c",
+   "id": "5b577891",
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9186a664",
+   "id": "4ad7203a",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d44160f5",
+   "id": "c8ad34bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6771622a",
+   "id": "db774898",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6ad07053",
+   "id": "6131f371",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "46306879",
+   "id": "44109387",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0dc47f2a",
+   "id": "3d5a2d01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1cba7c75",
+   "id": "99dc39c5",
    "metadata": {
     "scrolled": true
    },
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f71e76a8",
+   "id": "dc3248f6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1136,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "87a40759",
+   "id": "c49c0d8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b2db3520",
+   "id": "6f329d98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "57e9a42b",
+   "id": "9c566bbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1c4c99e3",
+   "id": "db601a5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "dcac7f76",
+   "id": "7f8c5459",
    "metadata": {
     "scrolled": false
    },
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e55c9a9",
+   "id": "f91038ee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1275,15 +1275,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e34aaca",
+   "id": "7f315f52",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "b0250da0",
+   "execution_count": 47,
+   "id": "926dffdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,11 +1291,11 @@
     "from tensorflow.keras import regularizers\n",
     "\n",
     "model = tf.keras.Sequential([\n",
-    "    tf.keras.layers.Dense(64, activation='tanh', input_shape=(28,),kernel_regularizer=regularizers.l2(0.001)),\n",
-    "    tf.keras.layers.Dense(128, activation='relu',kernel_regularizer=regularizers.l2(0.001)),\n",
-    "    tf.keras.layers.Dense(256, activation='tanh',kernel_regularizer=regularizers.l2(0.001)),\n",
-    "    tf.keras.layers.Dense(256, activation='tanh',kernel_regularizer=regularizers.l2(0.001)),\n",
-    "    tf.keras.layers.Dense(64, activation='relu',kernel_regularizer=regularizers.l2(0.001)),\n",
+    "    tf.keras.layers.Dense(64, activation='tanh', input_shape=(28,),kernel_regularizer=regularizers.l2(0.00001)),\n",
+    "    tf.keras.layers.Dense(128, activation='relu'),\n",
+    "    tf.keras.layers.Dense(256, activation='relu'),\n",
+    "    tf.keras.layers.Dense(256, activation='relu'),\n",
+    "    tf.keras.layers.Dense(64, activation='relu'),\n",
     "    tf.keras.layers.Dense(1, activation='sigmoid')   \n",
     "])\n",
     "\n"
@@ -1303,8 +1303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "2e3dfb0e",
+   "execution_count": 48,
+   "id": "041dcad9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,8 +1315,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "5a12aeca",
+   "execution_count": 49,
+   "id": "07d7bbb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,8 +1326,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "a96d297b",
+   "execution_count": 50,
+   "id": "62ee4bc0",
    "metadata": {
     "scrolled": false
    },
@@ -1343,62 +1343,86 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-23 15:30:28.348705: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:112] Plugin optimizer for device_type GPU is enabled.\n"
+      "2022-07-23 15:52:45.065252: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:112] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2800/2800 [==============================] - ETA: 0s - loss: 0.3275 - accuracy: 0.8468"
+      "2233/2240 [============================>.] - ETA: 0s - loss: 0.3288 - accuracy: 0.8410"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-23 15:30:50.892474: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:112] Plugin optimizer for device_type GPU is enabled.\n"
+      "2022-07-23 15:53:00.099458: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:112] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2800/2800 [==============================] - 25s 9ms/step - loss: 0.3275 - accuracy: 0.8468 - val_loss: 0.2988 - val_accuracy: 0.8626\n",
+      "2240/2240 [==============================] - 17s 7ms/step - loss: 0.3287 - accuracy: 0.8410 - val_loss: 0.3049 - val_accuracy: 0.8586\n",
       "Epoch 2/10\n",
-      "2800/2800 [==============================] - 24s 9ms/step - loss: 0.2996 - accuracy: 0.8630 - val_loss: 0.2991 - val_accuracy: 0.8640\n",
+      "2240/2240 [==============================] - 16s 7ms/step - loss: 0.2962 - accuracy: 0.8627 - val_loss: 0.2905 - val_accuracy: 0.8656\n",
       "Epoch 3/10\n",
-      "2800/2800 [==============================] - 24s 8ms/step - loss: 0.2948 - accuracy: 0.8658 - val_loss: 0.2954 - val_accuracy: 0.8659\n",
+      "2240/2240 [==============================] - 16s 7ms/step - loss: 0.2927 - accuracy: 0.8649 - val_loss: 0.2905 - val_accuracy: 0.8660\n",
       "Epoch 4/10\n",
-      "2800/2800 [==============================] - 24s 8ms/step - loss: 0.2930 - accuracy: 0.8665 - val_loss: 0.2924 - val_accuracy: 0.8671\n",
+      "2240/2240 [==============================] - 16s 7ms/step - loss: 0.2907 - accuracy: 0.8663 - val_loss: 0.2876 - val_accuracy: 0.8677\n",
       "Epoch 5/10\n",
-      "2800/2800 [==============================] - 24s 9ms/step - loss: 0.2911 - accuracy: 0.8678 - val_loss: 0.2934 - val_accuracy: 0.8665\n",
+      "2240/2240 [==============================] - 16s 7ms/step - loss: 0.2894 - accuracy: 0.8671 - val_loss: 0.3001 - val_accuracy: 0.8626\n",
       "Epoch 6/10\n",
-      "2800/2800 [==============================] - 24s 9ms/step - loss: 0.2907 - accuracy: 0.8681 - val_loss: 0.3027 - val_accuracy: 0.8632\n",
+      "2240/2240 [==============================] - 16s 7ms/step - loss: 0.2887 - accuracy: 0.8676 - val_loss: 0.2872 - val_accuracy: 0.8672\n",
       "Epoch 7/10\n",
-      "2800/2800 [==============================] - 24s 9ms/step - loss: 0.2899 - accuracy: 0.8683 - val_loss: 0.2865 - val_accuracy: 0.8703\n",
+      "2240/2240 [==============================] - 16s 7ms/step - loss: 0.2885 - accuracy: 0.8676 - val_loss: 0.2927 - val_accuracy: 0.8656\n",
       "Epoch 8/10\n",
-      "2800/2800 [==============================] - 24s 9ms/step - loss: 0.2890 - accuracy: 0.8689 - val_loss: 0.2856 - val_accuracy: 0.8705\n",
+      "2240/2240 [==============================] - 16s 7ms/step - loss: 0.2878 - accuracy: 0.8680 - val_loss: 0.2829 - val_accuracy: 0.8704\n",
       "Epoch 9/10\n",
-      "2800/2800 [==============================] - 24s 9ms/step - loss: 0.2888 - accuracy: 0.8690 - val_loss: 0.2962 - val_accuracy: 0.8649\n",
+      "2240/2240 [==============================] - 16s 7ms/step - loss: 0.2874 - accuracy: 0.8684 - val_loss: 0.2899 - val_accuracy: 0.8671\n",
       "Epoch 10/10\n",
-      "2800/2800 [==============================] - 24s 9ms/step - loss: 0.2885 - accuracy: 0.8692 - val_loss: 0.2871 - val_accuracy: 0.8698\n"
+      "2240/2240 [==============================] - 16s 7ms/step - loss: 0.2874 - accuracy: 0.8684 - val_loss: 0.2855 - val_accuracy: 0.8695\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x43c791ee0>"
+       "<tensorflow.python.keras.callbacks.History at 0x4526cf250>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train, y_train, epochs=10, validation_data=(X_test,y_test), batch_size=5000, callbacks=[es])"
+    "model.fit(X_train, y_train, epochs=10, validation_data=(X_test,y_test), batch_size=2500, callbacks=[es])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbb89bb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c60ec7a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e515a530",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
