best model added

--- a/case study 6/Model_D_casestudy6.ipynb
+++ b/case study 6/Model_D_casestudy6.ipynb
@@ -1432,7 +1432,84 @@
      "text": [
       "--- Starting trial: run-0\n",
       "{'activation': 'gelu', 'dropout': 0.0, 'optimizer': 'adam', 'num_units': 256}\n",
-      " 74607/175000 [===========>..................] - ETA: 5:50 - loss: 0.4070 - accuracy: 0.8236"
+      "175000/175000 [==============================] - 586s 3ms/step - loss: 0.3591 - accuracy: 0.8370\n",
+      "43750/43750 [==============================] - 124s 3ms/step - loss: 0.3165 - accuracy: 0.8523\n",
+      "--- Starting trial: run-1\n",
+      "{'activation': 'gelu', 'dropout': 0.0, 'optimizer': 'sgd', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 461s 3ms/step - loss: 1.9192 - accuracy: 0.4999\n",
+      "43750/43750 [==============================] - 91s 2ms/step - loss: 0.6940 - accuracy: 0.5002\n",
+      "--- Starting trial: run-2\n",
+      "{'activation': 'gelu', 'dropout': 0.2, 'optimizer': 'adam', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 521s 3ms/step - loss: 0.4024 - accuracy: 0.8233\n",
+      "43750/43750 [==============================] - 88s 2ms/step - loss: 0.3317 - accuracy: 0.8315\n",
+      "--- Starting trial: run-3\n",
+      "{'activation': 'gelu', 'dropout': 0.2, 'optimizer': 'sgd', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 473s 3ms/step - loss: 1.0254 - accuracy: 0.5001\n",
+      "43750/43750 [==============================] - 81s 2ms/step - loss: 0.6941 - accuracy: 0.5002\n",
+      "--- Starting trial: run-4\n",
+      "{'activation': 'relu', 'dropout': 0.0, 'optimizer': 'adam', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 399s 2ms/step - loss: 0.3659 - accuracy: 0.8353\n",
+      "43750/43750 [==============================] - 82s 2ms/step - loss: 0.3176 - accuracy: 0.8430\n",
+      "--- Starting trial: run-5\n",
+      "{'activation': 'relu', 'dropout': 0.0, 'optimizer': 'sgd', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 361s 2ms/step - loss: 0.9264 - accuracy: 0.4999\n",
+      "43750/43750 [==============================] - 64s 1ms/step - loss: 0.6938 - accuracy: 0.5002\n",
+      "--- Starting trial: run-6\n",
+      "{'activation': 'relu', 'dropout': 0.2, 'optimizer': 'adam', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 426s 2ms/step - loss: 0.3794 - accuracy: 0.8319\n",
+      "43750/43750 [==============================] - 80s 2ms/step - loss: 0.3244 - accuracy: 0.8469\n",
+      "--- Starting trial: run-7\n",
+      "{'activation': 'relu', 'dropout': 0.2, 'optimizer': 'sgd', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 449s 3ms/step - loss: 1.2488 - accuracy: 0.5003\n",
+      "43750/43750 [==============================] - 70s 2ms/step - loss: 0.6941 - accuracy: 0.5002\n",
+      "--- Starting trial: run-8\n",
+      "{'activation': 'selu', 'dropout': 0.0, 'optimizer': 'adam', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 390s 2ms/step - loss: 0.3585 - accuracy: 0.8376\n",
+      "43750/43750 [==============================] - 78s 2ms/step - loss: 0.3124 - accuracy: 0.8527\n",
+      "--- Starting trial: run-9\n",
+      "{'activation': 'selu', 'dropout': 0.0, 'optimizer': 'sgd', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 400s 2ms/step - loss: 2.1074 - accuracy: 0.5005\n",
+      "43750/43750 [==============================] - 70s 2ms/step - loss: 1.8857 - accuracy: 0.5002\n",
+      "--- Starting trial: run-10\n",
+      "{'activation': 'selu', 'dropout': 0.2, 'optimizer': 'adam', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 449s 3ms/step - loss: 0.3947 - accuracy: 0.8326\n",
+      "43750/43750 [==============================] - 90s 2ms/step - loss: 0.3123 - accuracy: 0.8539\n",
+      "--- Starting trial: run-11\n",
+      "{'activation': 'selu', 'dropout': 0.2, 'optimizer': 'sgd', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 390s 2ms/step - loss: 2.6104 - accuracy: 0.4995\n",
+      "43750/43750 [==============================] - 72s 2ms/step - loss: 2.1906 - accuracy: 0.4998\n",
+      "--- Starting trial: run-12\n",
+      "{'activation': 'swish', 'dropout': 0.0, 'optimizer': 'adam', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 425s 2ms/step - loss: 0.3766 - accuracy: 0.8324\n",
+      "43750/43750 [==============================] - 76s 2ms/step - loss: 0.3155 - accuracy: 0.8521\n",
+      "--- Starting trial: run-13\n",
+      "{'activation': 'swish', 'dropout': 0.0, 'optimizer': 'sgd', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 364s 2ms/step - loss: 1.5426 - accuracy: 0.5000\n",
+      "43750/43750 [==============================] - 79s 2ms/step - loss: 0.6941 - accuracy: 0.4998\n",
+      "--- Starting trial: run-14\n",
+      "{'activation': 'swish', 'dropout': 0.2, 'optimizer': 'adam', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 504s 3ms/step - loss: 0.3952 - accuracy: 0.8267\n",
+      "43750/43750 [==============================] - 87s 2ms/step - loss: 0.3298 - accuracy: 0.8316\n",
+      "--- Starting trial: run-15\n",
+      "{'activation': 'swish', 'dropout': 0.2, 'optimizer': 'sgd', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 445s 3ms/step - loss: 1.5347 - accuracy: 0.4997\n",
+      "43750/43750 [==============================] - 81s 2ms/step - loss: 0.6941 - accuracy: 0.4998\n",
+      "--- Starting trial: run-16\n",
+      "{'activation': 'tanh', 'dropout': 0.0, 'optimizer': 'adam', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 401s 2ms/step - loss: 0.3710 - accuracy: 0.8219\n",
+      "43750/43750 [==============================] - 78s 2ms/step - loss: 0.3578 - accuracy: 0.8195\n",
+      "--- Starting trial: run-17\n",
+      "{'activation': 'tanh', 'dropout': 0.0, 'optimizer': 'sgd', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 356s 2ms/step - loss: 0.7201 - accuracy: 0.4996\n",
+      "43750/43750 [==============================] - 87s 2ms/step - loss: 0.6940 - accuracy: 0.4998\n",
+      "--- Starting trial: run-18\n",
+      "{'activation': 'tanh', 'dropout': 0.2, 'optimizer': 'adam', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 459s 3ms/step - loss: 0.4685 - accuracy: 0.7631\n",
+      "43750/43750 [==============================] - 75s 2ms/step - loss: 0.4080 - accuracy: 0.8380\n",
+      "--- Starting trial: run-19\n",
+      "{'activation': 'tanh', 'dropout': 0.2, 'optimizer': 'sgd', 'num_units': 256}\n",
+      "175000/175000 [==============================] - 465s 3ms/step - loss: 0.7229 - accuracy: 0.4995\n",
+      "43750/43750 [==============================] - 80s 2ms/step - loss: 0.7343 - accuracy: 0.4998\n"
      ]
     }
    ],
@@ -1458,12 +1535,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "eef0ac86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%tensorboard` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir logs/hparam_tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1e0bec8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%tensorboard --logdir logs/hparam_tuning"
+    "#{'activation': 'gelu', 'dropout': 0.0, 'optimizer': 'adam', 'num_units': 256}"
    ]
   }
  ],
